# chess-engine

./: .gitignore  ChessEngineBase.py  MinMaxAlphaBetaEngine.py  MinMaxEngine.py  README.md  chess_engine.ipynb  helper.py  main.py  o.txt  pyproject.toml
.ipynb_checkpoints/: chess_engine-checkpoint.ipynb  main-checkpoint.py
